opam-version: "2.0"

synopsis: "Binding to libuv"

version: "dev"
license: "MIT"
homepage: "https://github.com/aantron/luv"
bug-reports: "https://github.com/aantron/luv/issues"

authors: "Anton Bachin <antonbachin@yahoo.com>"
maintainer: "Anton Bachin <antonbachin@yahoo.com>"
dev-repo: "git+https://github.com/aantron/luv.git"

depends: [
  "base-unix"
  "conf-python-2-7" {build}
  "ctypes" {>= "0.13.0"}
  "dune" {>= "1.8.0"}
  "ocaml" {>= "4.02.0"}
  ("ocaml" {>= "4.08.0"} | "ocaml-syntax-shims")
  "result"

  "alcotest" {dev & >= "0.8.1"}
  "lwt" {dev & >= "2.4.0"}
  "lwt_ppx" {dev}
  "odoc" {dev}
  "reason" {dev}
  "promise" {dev & >= "1.0.0"}
]

pin-depends: [
  ["promise.git" "git+https://github.com/aantron/promise.git"]
]

build: [
  ["dune" "build" "src/vendor/libuv.a" "--root" "."]
  ["dune" "build" "-p" name "-j" jobs]
]
