opam-version: "2.0"

synopsis: "Binding to libuv"

version: "dev"
license: "MIT"
homepage: "https://github.com/aantron/luv"
bug-reports: "https://github.com/aantron/luv/issues"

authors: "Anton Bachin <antonbachin@yahoo.com>"
maintainer: "Anton Bachin <antonbachin@yahoo.com>"
dev-repo: "git+https://github.com/aantron/luv.git"

depends: [
  "base-unix"
  "conf-python-2-7" {build}
  "ctypes" {>= "0.13.0"}
  "dune" {>= "2.0.0"}
  "ocaml" {>= "4.02.0"}
  ("ocaml" {>= "4.08.0"} | "ocaml-syntax-shims")
  "result"

  "alcotest" {dev & >= "0.8.1"}
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
