opam-version: "2.0"

synopsis: "Helpers for interfacing Luv and Unix"

version: "0.5.0"
license: "MIT"
homepage: "https://github.com/aantron/luv"
doc: "https://aantron.github.io/luv"
bug-reports: "https://github.com/aantron/luv/issues"

authors: "Anton Bachin <antonbachin@yahoo.com>"
maintainer: "Anton Bachin <antonbachin@yahoo.com>"
dev-repo: "git+https://github.com/aantron/luv.git"

depends: [
  "base-unix"
  "dune" {>= "2.0.0"}
  "luv"
  "ocaml" {>= "4.02.0"}
  "result"
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
