(rule (copy ../vendor/libuv/include/uv/aix.h aix.h))
(rule (copy ../vendor/libuv/include/uv/bsd.h bsd.h))
(rule (copy ../vendor/libuv/include/uv/darwin.h darwin.h))
(rule (copy ../vendor/libuv/include/uv/errno.h errno.h))
(rule (copy ../vendor/libuv/include/uv/linux.h linux.h))
(rule (copy ../vendor/libuv/include/uv/os390.h os390.h))
(rule (copy ../vendor/libuv/include/uv/posix.h posix.h))
(rule (copy ../vendor/libuv/include/uv/sunos.h sunos.h))
(rule (copy ../vendor/libuv/include/uv/threadpool.h threadpool.h))
(rule (copy ../vendor/libuv/include/uv/tree.h tree.h))
(rule (copy ../vendor/libuv/include/uv/unix.h unix.h))
(rule (copy ../vendor/libuv/include/uv/version.h version.h))
(rule (copy ../vendor/libuv/include/uv/win.h win.h))
