(cram
 (alias runtest-windows)
 (deps
   trivial.exe
   nodelay.exe
   keepalive.exe
   accepts.exe
   bind.exe
   getsockname.exe
   econnrefused.exe
   connect_gc.exe
   connect_leak.exe
   connect_sync_error.exe
   connect_sync_error_leak.exe
   connect_cancel.exe
   listen_accept.exe
   getpeername.exe
   listen_exception.exe
   connect_exception.exe
   read_write.exe
   eof.exe
   write_sync_error.exe
   write_sync_error_leak.exe
   read_exception.exe
   write_exception.exe
   try_write.exe
   try_write_error.exe
   shutdown.exe
   shutdown_sync_error.exe
   shutdown_sync_error_leak.exe
   shutdown_exception.exe
   close_reset_sync_error.exe
   close_reset.exe
   handle.exe
   socketpair.exe
 ))

(executables
 (names
   trivial
   nodelay
   keepalive
   accepts
   bind
   getsockname
   econnrefused
   connect_gc
   connect_leak
   connect_sync_error
   connect_sync_error_leak
   connect_cancel
   listen_accept
   getpeername
   listen_exception
   connect_exception
   read_write
   eof
   write_sync_error
   write_sync_error_leak
   read_exception
   write_exception
   try_write
   try_write_error
   shutdown
   shutdown_sync_error
   shutdown_sync_error_leak
   shutdown_exception
   close_reset_sync_error
   close_reset
   handle
   socketpair
 )
 (libraries luv unit_helpers)
 (flags -open Unit_helpers))
